--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -5,7 +5,7 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "emotion",
+    "@emotion",
     ["react-docgen", {}, "react-docgen-storybook"]
   ]
 }
