--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,10 @@
 {
+  "root": true,
   "parser": "babel-eslint",
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
+    "airbnb",
+    "prettier",
+    "prettier/react"
   ],
   "env": {
     "browser": true,
@@ -10,27 +12,53 @@
     "mocha": true
   },
   "rules": {
-    "no-console": 0
+    "prettier/prettier": [
+      "warn",
+      {
+        "printWidth": 100,
+        "tabWidth": 2,
+        "bracketSpacing": true,
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "jsxBracketSameLine": false,
+      },
+    ],
+    "import/prefer-default-export": 0,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js"
+        ],
+      },
+    ],
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-wrap-multilines": [
+      "error",
+      {
+        "arrow": false,
+      },
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "**/*.stories.js"
+        ]
+      }
+    ],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
   },
   "plugins": [
+    "prettier",
+    "import",
+    "jest",
+    "jsx-a11y",
+    "react",
+    "react-hooks",
+    "json",
+    "html",
     "jsdoc"
-  ],
-  "globals": {
-    "document": true,
-    "module": true,
-    "expect": true,
-    "it": true,
-    "describe": true,
-    "jest": true,
-    "afterAll": true,
-    "afterEach": true,
-    "beforeAll": true,
-    "beforeEach": true,
-    "global": true
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+  ]
 }
