--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-flatpickr": "^3.10.0",
     "react-redux": "^7.1.3",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
@@ -126,12 +125,10 @@
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
     "cross-env": "^7.0.0",
-    "css-loader": "^3.4.2",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-loader": "^3.0.3",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.7.0",
@@ -148,11 +145,9 @@
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
     "serve-static": "^1.14.1",
     "sort-package-json": "^1.39.1",
-    "storybook-addon-deps": "^1.0.11",
-    "style-loader": "^1.1.3"
+    "storybook-addon-deps": "^1.0.11"
   },
   "publishConfig": {
     "access": "public"
