--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "build-storybook": "build-storybook",
     "build:dist": "babel src --out-dir dist --ignore src/**/__tests__,src/**/__mocks__,src/**/*.stories.js",
     "clean": "rimraf $(cd src; ls) dist",
+    "commit": "npx git-cz",
     "heroku-postbuild": "npm run build-storybook",
     "lint:fix": "cross-env NODE_ENV=production eslint --config .eslintrc.js src --ignore-pattern !.eslintrc.js --fix",
     "lint:js": "cross-env NODE_ENV=production eslint --config .eslintrc.js src --ignore-pattern !.eslintrc.js",
     "lint:package": "sort-package-json",
     "prepublishOnly": "npm run test:cov && npm run clean && npm run build",
     "server": "node server.js",
-    "start": "start-storybook -p 6006",
+    "start": "start-storybook -s ./static -p 6006",
     "storybook": "start-storybook",
     "test": "cross-env NODE_ENV=test jest --runInBand",
     "test:cov": "npm run test -- --coverage",
@@ -88,66 +89,64 @@
     }
   },
   "dependencies": {
-    "@emotion/core": "^11.0.0-next.8",
     "@emotion/react": "^11.0.0-next.11",
     "@emotion/styled": "^11.0.0-next.8",
-    "@emotion/styled-base": "^11.0.0-next.3",
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "husky": "^4.2.3",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.0",
-    "styled-system": "^5.1.4"
+    "redux-form": "^8.3.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-env": "^7.8.7",
     "@emotion/babel-plugin": "^11.0.0-next.11",
-    "@storybook/addon-actions": "6.0.0-alpha.12",
-    "@storybook/addon-docs": "6.0.0-alpha.12",
-    "@storybook/addon-knobs": "6.0.0-alpha.12",
-    "@storybook/addon-links": "6.0.0-alpha.12",
-    "@storybook/react": "6.0.0-alpha.12",
+    "@storybook/addon-actions": "6.0.0-alpha.27",
+    "@storybook/addon-docs": "6.0.0-alpha.27",
+    "@storybook/addon-knobs": "6.0.0-alpha.27",
+    "@storybook/addon-links": "6.0.0-alpha.27",
+    "@storybook/react": "6.0.0-alpha.27",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-jsdoc": "^21.0.0",
-    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jsdoc": "^22.0.1",
+    "eslint-plugin-json": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "lint-staged": "^10.0.7",
+    "lint-staged": "^10.0.8",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
     "rimraf": "^3.0.2",
     "serve-static": "^1.14.1",
-    "sort-package-json": "^1.39.1",
-    "storybook-addon-deps": "^1.0.11"
+    "sort-package-json": "^1.40.0",
+    "storybook-addon-deps": "^1.0.12"
   },
   "publishConfig": {
     "access": "public"
