--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
+    "react-scripts": "^3.4.0",
     "rimraf": "^3.0.2",
     "serve-static": "^1.14.1",
     "sort-package-json": "^1.40.0",
