--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   "dependencies": {
     "@emotion/react": "^11.0.0-next.12",
     "@emotion/styled": "^11.0.0-next.12",
+    "@svgr/webpack": "^5.3.1",
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
@@ -106,6 +107,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-svg-loader": "^3.0.3",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.2",
