feat(svgicon component): add svgicon component

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@emotion"
+    "@emotion",
+    "inline-react-svg"
   ]
 }
