--- a/package.json
+++ b/package.json
@@ -98,17 +98,18 @@
   "dependencies": {
     "@emotion/react": "^11.0.0-next.12",
     "@emotion/styled": "^11.0.0-next.12",
+    "@svgr/webpack": "^5.3.1",
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
-    "husky": "^4.2.3",
+    "husky": "^4.2.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.2",
+    "redux-form": "^8.3.5",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
@@ -127,6 +128,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
@@ -137,25 +139,25 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-html": "^6.0.1",
+    "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-jsdoc": "^22.1.0",
+    "eslint-plugin-jsdoc": "^23.0.0",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.2.7",
-    "lint-staged": "^10.1.2",
+    "jest": "^25.3.0",
+    "lint-staged": "^10.1.5",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
     "prettier-eslint": "^9.0.1",
     "react-scripts": "^3.4.1",
     "rimraf": "^3.0.2",
     "serve-static": "^1.14.1",
-    "sort-package-json": "^1.41.0",
+    "sort-package-json": "^1.42.0",
     "standard-version": "^7.1.0",
     "storybook-addon-deps": "^2.0.0"
   },
