--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-popper-tooltip": "^2.11.1",
     "react-redux": "^7.2.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
