--- a/package.json
+++ b/package.json
@@ -97,20 +97,20 @@
     }
   },
   "dependencies": {
-    "@emotion/react": "^11.0.0-next.12",
-    "@emotion/styled": "^11.0.0-next.12",
-    "@svgr/webpack": "^5.3.1",
+    "@emotion/react": "11.1.1",
+    "@emotion/styled": "11.0.0",
+    "@svgr/webpack": "5.3.1",
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.2",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.5",
+    "redux-form": "^8.3.7",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
@@ -127,16 +127,16 @@
     "autoprefixer": "^9.7.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-inline-react-svg": "^1.1.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
-    "commitizen": "^4.0.4",
+    "commitizen": "^4.2.2",
     "cross-env": "^7.0.2",
-    "cz-conventional-changelog": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -160,7 +160,7 @@
     "serve-static": "^1.14.1",
     "sort-package-json": "^1.42.0",
     "standard-version": "^7.1.0",
-    "storybook-addon-deps": "^2.0.0"
+    "storybook-addon-deps": "2.0.0"
   },
   "publishConfig": {
     "access": "public"
