--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     }
   },
   "dependencies": {
-    "@emotion/react": "11.1.1",
+    "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
     "@svgr/webpack": "5.5.0",
     "classnames": "^2.2.6",
@@ -114,22 +114,22 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@emotion/babel-plugin": "^11.0.0-next.12",
-    "@storybook/addon-actions": "6.0.0-alpha.27",
-    "@storybook/addon-docs": "6.0.0-alpha.27",
-    "@storybook/addon-knobs": "6.0.0-alpha.27",
-    "@storybook/addon-links": "6.0.0-alpha.27",
-    "@storybook/react": "6.0.0-alpha.27",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@emotion/babel-plugin": "^11.1.2",
+    "@storybook/addon-actions": "6.1.15",
+    "@storybook/addon-docs": "6.1.15",
+    "@storybook/addon-knobs": "6.1.15",
+    "@storybook/addon-links": "6.1.15",
+    "@storybook/react": "6.1.15",
     "autoprefixer": "^9.7.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-inline-react-svg": "^1.1.2",
+    "babel-plugin-inline-react-svg": "1.1.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
@@ -160,7 +160,7 @@
     "serve-static": "^1.14.1",
     "sort-package-json": "^1.42.0",
     "standard-version": "^7.1.0",
-    "storybook-addon-deps": "2.0.0"
+    "storybook-addon-deps": "2.1.3"
   },
   "publishConfig": {
     "access": "public"
