--- a/package.json
+++ b/package.json
@@ -100,66 +100,65 @@
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
     "@svgr/webpack": "5.5.0",
-    "classnames": "^2.3.1",
-    "enzyme": "^3.11.0",
-    "express": "^4.17.1",
-    "husky": "^4.3.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-text-mask": "^5.4.3",
-    "redux": "^4.1.0",
-    "redux-form": "^8.3.7",
-    "styled-system": "^5.1.5"
+    "classnames": "2.3.1",
+    "enzyme": "3.11.0",
+    "express": "4.17.1",
+    "husky": "4.3.0",
+    "prop-types": "15.7.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.4",
+    "react-text-mask": "5.4.3",
+    "redux": "4.1.0",
+    "redux-form": "8.3.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.14.4",
-    "@emotion/babel-plugin": "^11.3.0",
+    "@babel/cli": "7.14.3",
+    "@babel/core": "7.14.3",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/preset-env": "7.14.4",
+    "@emotion/babel-plugin": "11.3.0",
     "@storybook/addon-actions": "6.2.9",
     "@storybook/addon-docs": "6.2.9",
     "@storybook/addon-knobs": "6.2.9",
     "@storybook/addon-links": "6.2.9",
     "@storybook/react": "6.2.9",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-    "autoprefixer": "^10.2.6",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-css-modules-transform": "^1.6.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.1",
+    "autoprefixer": "10.2.6",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
+    "babel-plugin-css-modules-transform": "1.6.2",
     "babel-plugin-inline-react-svg": "2.0.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "codecov": "^4.0.0-0",
-    "commitizen": "^4.2.4",
-    "cross-env": "^7.0.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-jsdoc": "^23.0.0",
-    "eslint-plugin-json": "^2.1.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.3",
-    "lint-staged": "^11.0.0",
-    "node-sass": "^4.13.1",
-    "prettier": "^2.3.0",
-    "prettier-eslint": "^12.0.0",
-    "react-scripts": "^3.4.1",
-    "rimraf": "^3.0.2",
-    "serve-static": "^1.14.1",
-    "sort-package-json": "^1.50.0",
-    "standard-version": "^9.3.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "codecov": "4.0.0-0",
+    "commitizen": "4.2.4",
+    "cross-env": "7.0.3",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.27.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-html": "6.1.2",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-jsdoc": "35.1.2",
+    "eslint-plugin-json": "3.0.0",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "27.0.3",
+    "lint-staged": "11.0.0",
+    "node-sass": "4.13.1",
+    "prettier": "2.3.0",
+    "prettier-eslint": "12.0.0",
+    "react-scripts": "3.4.1",
+    "rimraf": "3.0.2",
+    "serve-static": "1.14.1",
+    "sort-package-json": "1.50.0",
+    "standard-version": "9.3.0",
     "storybook-addon-deps": "2.2.0"
   },
   "publishConfig": {
