--- a/package.json
+++ b/package.json
@@ -107,11 +107,8 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-final-form": "^6.5.3",
-    "react-redux": "7.2.5",
-    "react-text-mask": "5.4.3",
-    "redux": "4.1.1",
-    "redux-form": "8.3.7"
+    "react-final-form": "6.5.7",
+    "react-text-mask": "5.4.3"
   },
   "devDependencies": {
     "@babel/cli": "7.15.4",
