--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint:fix": "cross-env NODE_ENV=production eslint --config .eslintrc.js src --ignore-pattern !.eslintrc.js --fix",
     "lint:js": "cross-env NODE_ENV=production eslint --config .eslintrc.js src --ignore-pattern !.eslintrc.js",
     "lint:package": "sort-package-json",
+    "prepare": "husky install",
     "prepublishOnly": "npm run test:cov && npm run clean && npm run build",
     "release": "standard-version",
     "server": "node server.js",
@@ -36,12 +37,6 @@
     "test:watch": "npm test -- --watch",
     "validate": " npm run test:cov && npm run clean && npm run build",
     "postversion": "git push && git push --tags"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
   },
   "lint-staged": {
     "*.js": [
@@ -99,12 +94,12 @@
   "dependencies": {
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
-    "@svgr/webpack": "5.5.0",
+    "@svgr/webpack": "6.1.2",
     "classnames": "2.3.1",
     "enzyme": "3.11.0",
     "express": "4.17.2",
     "final-form": "4.20.4",
-    "husky": "4.3.0",
+    "husky": "7.0.4",
     "prop-types": "15.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -112,21 +107,21 @@
     "react-text-mask": "5.4.3"
   },
   "devDependencies": {
-    "@babel/cli": "7.15.4",
-    "@babel/core": "7.15.5",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/preset-env": "7.15.6",
-    "@emotion/babel-plugin": "11.3.0",
-    "@storybook/addon-actions": "6.3.8",
-    "@storybook/addon-docs": "6.3.8",
-    "@storybook/addon-knobs": "6.3.1",
-    "@storybook/addon-links": "6.3.8",
-    "@storybook/react": "6.3.8",
-    "@wojtekmaj/enzyme-adapter-react-17": "0.6.3",
-    "autoprefixer": "10.3.4",
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.5",
+    "@babel/plugin-proposal-class-properties": "7.16.5",
+    "@babel/preset-env": "7.16.5",
+    "@emotion/babel-plugin": "11.7.2",
+    "@storybook/addon-actions": "6.4.9",
+    "@storybook/addon-docs": "6.4.9",
+    "@storybook/addon-knobs": "6.4.0",
+    "@storybook/addon-links": "6.4.9",
+    "@storybook/react": "6.4.9",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
+    "autoprefixer": "10.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
+    "babel-loader": "8.2.3",
     "babel-plugin-css-modules-transform": "1.6.2",
     "babel-plugin-inline-react-svg": "2.0.1",
     "babel-preset-env": "1.7.0",
@@ -135,28 +130,28 @@
     "commitizen": "4.2.4",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
+    "eslint": "8.5.0",
+    "eslint-config-airbnb": "19.0.2",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-html": "6.1.2",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jest": "24.4.0",
-    "eslint-plugin-jsdoc": "36.1.0",
+    "eslint-plugin-html": "6.2.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jest": "25.3.0",
+    "eslint-plugin-jsdoc": "37.4.0",
     "eslint-plugin-json": "3.1.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.25.1",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.2.0",
-    "lint-staged": "11.1.2",
-    "prettier": "2.4.0",
+    "jest": "27.4.5",
+    "lint-staged": "12.1.4",
+    "prettier": "2.5.1",
     "prettier-eslint": "13.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "rimraf": "3.0.2",
-    "serve-static": "1.14.1",
-    "sort-package-json": "1.51.0",
-    "standard-version": "9.3.1",
+    "serve-static": "1.14.2",
+    "sort-package-json": "1.53.1",
+    "standard-version": "9.3.2",
     "storybook-addon-deps": "2.2.0"
   },
   "publishConfig": {
